Removed workspace breadcrumb div. May revisit in the future. Updated workspace table css to handle overflow only on the table body. Ensured correct height/width for containing divs leading down to the table.

--- a/app/index.css
+++ b/app/index.css
@@ -1,25 +1,40 @@
 @import url(./src/css/theme.css);
 
+@font-face {
+    font-family: "Cascadia Mono";
+    font-style: normal;
+    src: local("Cascadia Mono"), url("./assets/font/cascadia/CascadiaMono.woff2") format("woff2");
+}
+
+@font-face {
+    font-family: "Jetbrains Mono";
+    font-style: normal;
+    font-weight: normal;
+    src: local("Jetbrains Mono"), url("./assets/font/jetbrains_mono/JetBrainsMono-Regular.woff2");
+}
+
+
 :root {
-    --app-icon-svg-stroke: 1.5;
+    --app-primary-font-family: "Jetbrains Mono";
     
     --app-titlebar-height: 40px;
-    --app-titlebar-border-width: 1px;
     --app-titlebar-icon-width: var(--app-titlebar-height);
     --app-titlebar-icon-svg-size: 16px;
+    --app-titlebar-icon-svg-stroke-width: 1.5;
 
     --app-content-dock-width: var(--app-titlebar-icon-width);;
     --app-content-dock-icon-svg-size: 22px;
+    --app-content-dock-icon-svg-stroke-width: var(--app-titlebar-icon-svg-stroke-width);
 
     --app-content-sidebar-width: 200px;
 
+    --app-workspace-table-icon-svg-size: 18px;
+    --app-workspace-table-icon-svg-stroke-width: 1.25;
+
     --app-content-terminal-height: 200px;
 
-    --app-workspace-padding-h: 40px;
-    --app-workspace-padding-v: 20px;
-    --app-workspace-table-icon-svg-size: 18px;
-    --app-workspace-table-attributes-padding: 8px;
-
+    --app-content-container-height: calc(100% - var(--app-titlebar-height));
+    --app-content-width: calc(100% - var(--app-content-dock-width));
 }
 
 html,
@@ -29,15 +44,13 @@ body {
     height: 100%;
     width: 100%;
 
-    font-family: monospace;
     overflow: hidden;
+
+    font-family: var(--app-primary-font-family);
+    font-size: 12px;
 
     background-color: var(--app-dark-primary-background-color);
     color: var(--app-dark-primary-foreground-color);
-}
-
-.app-hide {
-    display: none !important;
 }
 
 .app-container {
@@ -45,6 +58,18 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
+}
+
+.icon-button:hover {
+    color: var(--app-dark-button-path-color-hover);
+    background-color: var(--app-dark-button-background-color-hover);
+}
+
+.icon-button svg {
+    stroke: currentColor;
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
 }
 
 .titlebar {
@@ -87,23 +112,11 @@ body {
 .titlebar-button svg {
     width: var(--app-titlebar-icon-svg-size);
     height: var(--app-titlebar-icon-svg-size);
+    stroke-width: var(--app-titlebar-icon-svg-stroke-width);
 }
 
 .titlebar-button:last-child:hover {
     background-color: var(--app-dark-button-close-background-color-hover);
-}
-
-.titlebar-button:hover, .dock-button:hover {
-    color: var(--app-dark-button-path-color-hover);
-    background-color: var(--app-dark-button-background-color-hover);
-}
-
-.lucide-icon svg {
-    stroke: currentColor;
-    fill: none;
-    stroke-width: var(--app-icon-svg-stroke);
-    stroke-linecap: round;
-    stroke-linejoin: round;
 }
 
 .content-container {
@@ -111,17 +124,7 @@ body {
     flex: 1 0 0;
     flex-direction: row;
     width: 100%;
-    height: 100%;
-}
-
-.content {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    
-    /* border-top-style: solid;
-    border-top-width: 1px;
-    border-top-color: var(--app-dark-primary-separator-color); */
+    height: var(--app-content-container-height);
 }
 
 .content-dock {
@@ -141,6 +144,16 @@ body {
     /* border-right-style: solid;
     border-right-width: 1px;
     border-right-color: var(--app-dark-primary-separator-color); */
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    width: var(--app-content-width);
+    
+    /* border-top-style: solid;
+    border-top-width: 1px;
+    border-top-color: var(--app-dark-primary-separator-color); */
 }
 
 /* .dock-section {
@@ -168,6 +181,7 @@ body {
 .dock-button svg {
     width: var(--app-content-dock-icon-svg-size);
     height: var(--app-content-dock-icon-svg-size);
+    stroke-width: var(--app-content-dock-icon-svg-stroke-width);
 }
 
 /* .content-sidebar {
@@ -179,7 +193,6 @@ body {
 .content-workspace {
     display: flex;
     flex-direction: column;
-    width: 100%;
 }
 
 .workspace {
@@ -192,10 +205,24 @@ body {
     border-bottom-color: var(--app-dark-primary-separator-color); */
 }
 
+.workspace-main {
+    height: 100%;
+}
+
+.main-table {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.main-table-data {
+    overflow-y: auto;
+}
 
 .table-icon svg {
     width: var(--app-workspace-table-icon-svg-size);
     height: var(--app-workspace-table-icon-svg-size);
+    stroke-width: var(--app-workspace-table-icon-svg-stroke-width);
 }
 
 .content-terminal {
